--- a/solokhov-pop-up/src/index.html
+++ b/solokhov-pop-up/src/index.html
@@ -6,6 +6,10 @@
 })
 
 <body>
+  <div class="block-button-show-modal">
+    <a href="#" class="open-popup">Открыть попап</a>
+  </div>
+
   <div class="__container">
     <div class="block-pop-up-modal modal">
       <div class="block-pop-up">
@@ -24,7 +28,7 @@
         </div>
       </div>
 
-      <div class="block-pop-up__close">
+      <div class="block-pop-up__close close-popup">
         <img src="img/index/combined-shape.png" alt="combined-shape" class="">
       </div>
 
@@ -156,7 +160,7 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script> -->
 
   <!-- ======== Main Script ======== -->
-  <!-- <script src="js/app.min.js"></script> -->
+  <script src="js/app.min.js"></script>
 
 </body>
 
