--- a/solokhov-pop-up/solokhov-pop-up/index.html
+++ b/solokhov-pop-up/solokhov-pop-up/index.html
@@ -71,7 +71,7 @@
           <div class="block-pop-up__card-parallelogram-head">
             <h3 class="block-pop-up__card-title">Параметры здания</h3>
           </div>
-          <div class="block-pop-up__card-column">
+          <div class="block-pop-up__card-column card-column-1">
             <div class="block-pop-up__card-column-data">
               <p class="block-pop-up__card-column-data-adress">Адрес</p>
               <p class="block-pop-up__card-column-data-count-square">Общая площадь офисных помещений:</p>
@@ -100,7 +100,7 @@
           <div class="block-pop-up__card-parallelogram-head">
             <h3 class="block-pop-up__card-title">Договор</h3>
           </div>
-          <div class="block-pop-up__card-column">
+          <div class="block-pop-up__card-column card-column-2">
             <div class="block-pop-up__card-column-data">
               <p class="block-pop-up__card-column-data-adress">Номер договора:</p>
               <p class="block-pop-up__card-column-data-count-square">Дата заключения договора:</p>
@@ -125,7 +125,7 @@
           <div class="block-pop-up__card-parallelogram-head">
             <h3 class="block-pop-up__card-title">Параметры офисного помещения</h3>
           </div>
-          <div class="block-pop-up__card-column">
+          <div class="block-pop-up__card-column card-column-3">
             <div class="block-pop-up__card-column-data">
               <p class="block-pop-up__card-column-data-adress">Площадь:</p>
               <div class="block-pop-up__card-column-data-placeholder placeholder-1"></div>
@@ -146,7 +146,7 @@
           <div class="block-pop-up__card-parallelogram-head">
             <h3 class="block-pop-up__card-title">Группы</h3>
           </div>
-          <div class="block-pop-up__card-column button-block">
+          <div class="block-pop-up__card-column card-column-4 button-block">
             <div class="block-pop-up__card-column-button">Сдано в аренду</div>
             <div class="block-pop-up__card-column-button">Помещения для аренды</div>
             <div class="block-pop-up__card-column-button">Офис класса А</div>
