--- a/solokhov-pop-up/solokhov-pop-up/index.html
+++ b/solokhov-pop-up/solokhov-pop-up/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="img/favicon.ico" type="image/ico">
 
   <!-- ======== Style ======== -->
-  <link rel="stylesheet" href="css/style.min.css?_v=20220113174119">
+  <link rel="stylesheet" href="css/style.min.css?_v=20220113181751">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           <h2 class="pop-up__data-tower-title">Бизнес центр Space Tower </h2>
           <p class="pop-up__data-tower-sub-title">Здание</p>
         </div>
-        <span>
+        <span class="pop-up__slash">
           /
         </span>
         <div class="pop-up__data-square">
@@ -50,7 +50,7 @@
 
       <div class="pop-up__row">
         <div class="pop-up__card card-1">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-1">
             <h3 class="pop-up__tabs-title">Параметры здания</h3>
           </div>
           <div class="pop-up__row-card row-card-1">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="pop-up__card card-2">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-2">
             <h3 class="pop-up__tabs-title">Договор</h3>
           </div>
           <div class="pop-up__row-card row-card-2">
@@ -106,7 +106,7 @@
         </div>
 
         <div class="pop-up__card card-3">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-3">
             <h3 class="pop-up__tabs-title">Параметры офисного помещения</h3>
           </div>
           <div class="pop-up__row-card row-card-3">
@@ -128,8 +128,8 @@
           </div>
         </div>
 
-        <div class="pop-up__card card-4">
-          <div class="pop-up__tabs">
+        <div class="pop-up__card card-4 ">
+          <div class="pop-up__tabs tabs-4">
             <h3 class="pop-up__tabs-title">Группы</h3>
           </div>
           <div class="pop-up__row-card row-card-4 row-card-groups">
@@ -147,7 +147,7 @@
   </div>
 
   <!-- ======== Main Script ======== -->
-  <script src="js/app.min.js?_v=20220113174119"></script>
+  <script src="js/app.min.js?_v=20220113181751"></script>
 
 </body>
 
