--- a/solokhov-pop-up/src/index.html
+++ b/solokhov-pop-up/src/index.html
@@ -19,7 +19,7 @@
           <h2 class="pop-up__data-tower-title">Бизнес центр Space Tower </h2>
           <p class="pop-up__data-tower-sub-title">Здание</p>
         </div>
-        <span>
+        <span class="pop-up__slash">
           /
         </span>
         <div class="pop-up__data-square">
@@ -38,7 +38,7 @@
 
       <div class="pop-up__row">
         <div class="pop-up__card card-1">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-1">
             <h3 class="pop-up__tabs-title">Параметры здания</h3>
           </div>
           <div class="pop-up__row-card row-card-1">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="pop-up__card card-2">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-2">
             <h3 class="pop-up__tabs-title">Договор</h3>
           </div>
           <div class="pop-up__row-card row-card-2">
@@ -94,7 +94,7 @@
         </div>
 
         <div class="pop-up__card card-3">
-          <div class="pop-up__tabs">
+          <div class="pop-up__tabs tabs-3">
             <h3 class="pop-up__tabs-title">Параметры офисного помещения</h3>
           </div>
           <div class="pop-up__row-card row-card-3">
@@ -116,8 +116,8 @@
           </div>
         </div>
 
-        <div class="pop-up__card card-4">
-          <div class="pop-up__tabs">
+        <div class="pop-up__card card-4 ">
+          <div class="pop-up__tabs tabs-4">
             <h3 class="pop-up__tabs-title">Группы</h3>
           </div>
           <div class="pop-up__row-card row-card-4 row-card-groups">
